home.html arquivos modificados com algumas alteracoes no header

--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-<meta charset="UTF-8">
-<Meta name="viewport" content="width=device-width, initia 1-scale=1.0">
-<link rel="stylesheet" type="text/css" href="style.css" media="screen">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     <title>Quiz + conhecimento</title>
 </head>
 <body>
