--- a/go.html
+++ b/go.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css">
         <title> QUIZ - INTELIGÊNCIA</title>
     </head>
 
     <body>
-        <h1> QUIZ Inteligência</h1>
+        <h1> QUIZ INTELIGÊNCIA</h1>
         <a href="index.html"><button>GO</button></a>
     </body>
 </html>
