--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css">
+        <title> QUIZ - INTELIGÊNCIA</title>
+    </head>
 
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <h2>QUIZ APP</h2>
-  <main>
-    <div class="content">
-      <span class="spnQtd"></span>
-      <span class="question"></span>
-      <div class="answers"></div>
-    </div>
-    <div class="finish">
-      <span></span>
-      <button>Reiniciar</button>
-    </div>
-  </main>
-  
-  <script src="script.js" type="module"></script>
-</body>
+    <body>
+        <h1> QUIZ INTELIGÊNCIA</h1>
+        <a href="main.html"><button>GO</button></a>
+    </body>
 </html>
