adcionado campo score e estilo css em algumas coisas

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
         <title> QUIZ - INTELIGÊNCIA</title>
     </head>
 
-    <body>
+      <div>
         <h1> QUIZ INTELIGÊNCIA</h1>
+      </div>
+      <div>
+        <main>
+          <p>Score</p>
+        </main>
+      </div>
+        <body>
         <a href="main.html"><button>GO</button></a>
     </body>
 </html>
