--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
   <h2>QUIZ APP</h2>
   <main>
     <div class="content">
-      <span class="spnQtd">spnQtd</span>
+      <span class="spnQtd"></span>
       <span class="questoes"></span>
-      <div class="answers">answers</div>
+      <div class="answers"></div>
     </div>
     <div class="finish">
       <span></span>
