A new Branch add as Quiz-sistem-test

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="style.css">
         <title> QUIZ - INTELIGÊNCIA</title>
     </head>
+
+    <body>
 
       <div>
         <h1> QUIZ INTELIGÊNCIA</h1>
@@ -15,7 +19,8 @@
           <p>Score</p>
         </main>
       </div>
-        <body>
-        <a href="main.html"><button>GO</button></a>
+    
+      <a href="main.html"><button>GO</button></a>
+    </body>
     </body>
 </html>
