--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css">
-        <title> QUIZ - INTELIGÊNCIA</title>
+        <title>RedBrain</title>
+        <link rel="icon" type="image/x-icon" href="Favicon/favicon.ico">
     </head>
 
-      <div>
-        <h1> QUIZ INTELIGÊNCIA</h1>
-      </div>
-      <div>
-        <main>
-          <p>Score</p>
-        </main>
-      </div>
-        <body>
-        <a href="main.html"><button>GO</button></a>
+    <body>
+        
+    <div class="container">
+        <header>
+            <img src="Favicon/android-chrome-512x512.png" alt="RedBrain" class="Logo">
+            <h1>RedBrain</h1>
+        </header>
+
+        <h2 class="main-text">TESTE SEU<br>CONHECIMENTO</h2>
+        <div class="scoreindex">
+            <main>
+              <p>Score</p>
+            </main>
+          </div>
+        <div class="Buttons">
+            <a href="main.html"><button class="btn">PLAY GAME</button></a>
+        </div>
+    </div>
     </body>
+
+    <footer>
+        <p>&copy;2024 - RedBrain - Todos Os Direitos Reservados</p>
+    </footer>   
 </html>
